@@ -14,6 +14,17 @@ jest.mock( 'wcpay/data', () => ( {
 	useDisputeEvidence: jest.fn(),
 } ) );
 
+jest.mock( '@wordpress/data', () => ( {
+	createRegistryControl: jest.fn(),
+	dispatch: jest.fn( () => ( { setIsMatching: jest.fn() } ) ),
+	registerStore: jest.fn(),
+	select: jest.fn(),
+	useDispatch: jest.fn( () => ( { createErrorNotice: jest.fn() } ) ),
+	useSelect: jest.fn( () => ( { getNotices: jest.fn() } ) ),
+	withDispatch: jest.fn( () => jest.fn() ),
+	withSelect: jest.fn( () => jest.fn() ),
+} ) );
+
 const disputeNeedsResponse = {
 	id: 'dp_asdfghjkl',
 	amount: 1000,
