@@ -108,6 +108,7 @@ Please note that our support for the checkout block is still experimental and th
 * Fix - Prevent Payment Request buttons from showing up in Composite Product pages.
 * Add - Onboarding flows on the admin WooCommerce > Subscriptions screen for stores with no subscriptions yet.
 * Fix - Fatal error on thank you page for deleted orders.
+* Add - Error messages when dispute evidence exceeds Stripe limits.
 
 = 3.3.0 - 2021-11-18 =
 * Add - Add Idempotency Key to POST headers.
